<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/space_lg">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/typeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/typeAnnouncement"
            style="@style/Widget.Aula.Button.Outlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/type_announcement" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/typeAssignment"
            style="@style/Widget.Aula.Button.Outlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/type_assignment" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/typeFile"
            style="@style/Widget.Aula.Button.Outlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/type_file" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Aula.TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_md"
        android:hint="@string/title_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Aula.TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_sm"
        android:hint="@string/body_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:minLines="3" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPickFile"
        style="@style/Widget.Aula.Button.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/attach_file" />

    <TextView
        android:id="@+id/textPickedFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBodySmall"
        android:textColor="@color/on_surface_variant" />
</LinearLayout>
