<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space_lg">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Aula.TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/submit_comment_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:minLines="3" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Aula.TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm"
            android:hint="@string/submit_link_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:text="@string/submit_attach_label"
            android:textAppearance="?attr/textAppearanceLabelMedium"
            android:textColor="@color/on_surface" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPickPhoto"
                style="@style/Widget.Aula.Button.Outlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_xs"
                android:layout_weight="1"
                android:text="@string/submit_photo" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPickVideo"
                style="@style/Widget.Aula.Button.Outlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_xs"
                android:layout_weight="1"
                android:text="@string/submit_video" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPickFile"
                style="@style/Widget.Aula.Button.Outlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit_file" />
        </LinearLayout>

        <TextView
            android:id="@+id/textSubmitAttachments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm"
            android:textAppearance="?attr/textAppearanceBodySmall"
            android:textColor="@color/on_surface_variant" />
    </LinearLayout>
</ScrollView>
